--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
          <h2 > Espero que gostem </h2 >
          <h3 > Quem divide  multiplica! A divisão é o maior fator multiplicador </h3 >
          <p > Ao dividir estamos <b > Multiplicando </b > , a <i > paz, saúde, etc </i >
+        <img src="imagens/girassol.jpeg" alt="Foto do girassol">
          <ul >
          <li > primeiro </li >
          <Li > Segundo </li >
