--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
  <html >
 <head >
      <meta  charset = " utf-8 " >
+     <title>site</title><link rel="stylesheet" href="estilo.css">
      </head >
      <body >
          <h1 > Bem-vindo! </h1 >
